--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
 }
 
 .navbar {
-    background-color: #003366; /* Dark blue background */
+    background-color: #75b4ef; 
     padding: 10px 0;
 }
 
