Mensagem do commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,3 +108,8 @@
     font-family: Calibri;
     margin-left: auto;
 }
+
+.below-navbar h2 {
+    font-family: Calibri;
+    margin-left: auto;
+}
