Mensagem do commit2

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,10 +98,9 @@
 
 .below-navbar button {
     font-family: Calibri;
-    background-color: #0055aa;
 }
 
-.below-navbar {
+.h2 {
     font-family: Calibri;
 }
 
