--- a/css/styles.css
+++ b/css/styles.css
@@ -96,11 +96,15 @@
     display: block;
 }
 
-.below-navbar button {
+.below-navbar a {
     font-family: Calibri;
 }
 
-.h2 {
+.below-navbar h1 {
+    font-family: Calibri;
+}
+
+.below-line h2 {
     font-family: Calibri;
 }
 
@@ -131,6 +135,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 250px;
     text-align: center;
+    font-family: Calibri;
 }
 
 .collection-item img {
@@ -140,9 +145,80 @@
 
 .collection-item h3 {
     margin: 10px 0 5px;
+    font-family: Calibri;
 }
 
 .collection-item p {
     font-size: 14px;
     color: #555;
+    font-family: Calibri;
+}
+
+.button-new-collection {
+    font-family: Calibri;
+    margin-left: 95%;
+    background-color: #8d9eaf;
+}
+
+.button-collection {
+    font-family: Calibri;
+    background-color: #8d9eaf;
+    margin-left: 95%;
+}
+
+/* Estilizar o fundo escuro quando o popup aparece */
+.popup {
+    display: none; /* Esconde o popup por padrão */
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro transparente */
+    justify-content: center;
+    align-items: center;
+    font-family: Calibri;
+}
+
+/* Estilizar a área do formulário dentro do popup */
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+    text-align: center;
+    position: relative;
+    font-family: Calibri;
+}
+
+/* Botão de fechar */
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/* Estilo dos inputs e botões */
+input {
+    width: 90%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: Calibri;
+}
+
+button {
+    background-color: #008CBA;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #005f73;
 }
