--- a/css/styles.css
+++ b/css/styles.css
@@ -174,26 +174,23 @@
 
 /* Estilizar o fundo escuro quando o popup aparece */
 .popup {
-    display: none; /* Esconde o popup por padrão */
+    display: none;
     position: fixed;
-    left: 0;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro transparente */
+    background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
     font-family: Calibri;
 }
 
-/* Estilizar a área do formulário dentro do popup */
 .popup-content {
-    background-color: white;
+    background: white;
     padding: 20px;
     border-radius: 10px;
-    width: 300px;
     text-align: center;
-    position: relative;
     font-family: Calibri;
 }
 
