mensagem do commit 09/05

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,6 +248,11 @@ button:hover {
     display: none;
 }
 
+.tipo-colecao {
+    display: none;
+}
+
+
 .collection-btn {
     display: flex;
     justify-content: center;
