--- a/css/styles.css
+++ b/css/styles.css
@@ -442,3 +442,15 @@ h2 {
 .star.hovered, .star.selected {
     color: gold;
 }
+
+.perfil-botao {
+    padding: 8px 12px;
+    background-color: #333;
+    color: white;
+    border: none;
+    text-decoration: none;
+    border-radius: 4px;
+}
+.perfil-botao:hover {
+    background-color: #555;
+}
