--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@
 .popup-content {
   background-color: #fff;
   padding: 20px;
-  position: relative;
+  position: absolute;
   width: 300px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
